--- a/My/Interfaces/HabitEdit/HabitEdit.storyboard
+++ b/My/Interfaces/HabitEdit/HabitEdit.storyboard
@@ -53,6 +53,9 @@
                                                 <constraint firstAttribute="bottom" secondItem="wJv-6L-KO8" secondAttribute="bottom" constant="10" id="whR-u0-89L"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="view" destination="wJv-6L-KO8" id="7bi-4K-KYx"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HabitEditStartCell" rowHeight="80" id="T93-Us-FvY" customClass="HabitEditStartCell" customModule="My" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="220" width="375" height="80"/>
